# stm32gcc

./: README.md
project/: .gitignore  .mxproject  CMakeLists.txt  Makefile  config.mk  flash.sh  project.ioc  sdram.ld
project/Core/Inc/: main.h  stm32f4xx_it.h
project/Core/Src/: gpio.c  main.c  stm32f4xx_it.c  usart.c
project/app/: CMakeLists.txt  app.mk  app_main.c  app_main.cpp  app_main.h
project/app/custom/: custom.mk  sdkconfig.c  sdkconfig.h  sys.c  sys.h
project/app/hello/: hello.cc  hello.hpp
project/bsp/: CMakeLists.txt
project/bsp/compat/: hal_std_compat.c  hal_std_compat.h
project/bsp/drivers/delay/: delay.c  delay.h
project/bsp/drivers/led/: led.c  led.h
project/bsp/examples/: led_example.c  led_example.h
project/cmake/: gcc-arm-none-eabi.cmake
project/cmake/stm32cubemx/: CMakeLists.txt
project/lib/: CMakeLists.txt  lib.mk
project/lib/FreeRTOS/: freertos.mk  freertos_config.cmake
project/lib/FreeRTOS/include/: FreeRTOSConfig.h
project/lib/log/: CMakeLists.txt  log.c  log.h  log_config.h
project/tools/: flash.sh
project/tools/openocd/: mem_helper.tcl
project/tools/openocd/interface/: flash.cfg  flash_downloader.cfg
